use money format setting on product page

--- a/source/product.html
+++ b/source/product.html
@@ -14,7 +14,7 @@
           <span class="hamburger-inner"></span>
         </span>
       </button>
-      <div class="overlay-title">{{ product.default_price | money_with_sign }} — Select option</div>
+      <div class="overlay-title">{{ product.default_price | money: theme.money_format }} — Select option</div>
     </div>
     
     <div class="overlay-content centered-content">
@@ -26,7 +26,7 @@
           <ul class="options-list">
             {% for option in product.options %}
               <li class="option-item{% if option.sold_out %} sold-out{% endif %}" data-option-id="{{ option.id }}" data-option-price="{{ option.price | money_with_sign | strip_html }}">
-                {{ option.name }} {% if option.price != product.default_price %}— {{ option.price | money_with_sign }}{% endif %}
+                {{ option.name }} {% if option.price != product.default_price %}— {{ option.price | money: theme.money_format }}{% endif %}
               </li>
             {% endfor %}
           </ul>
@@ -59,11 +59,11 @@
 {% if product.status == 'active' %}
   {% if product.has_default_option %}
     <button class="button add-to-cart-button" type="submit">
-      <span class="status-text">{{ product.default_price | money_with_sign }} — Add to Cart</span>
+      <span class="status-text">{{ product.default_price | money: theme.money_format }} — Add to Cart</span>
     </button>
   {% else %}
     <button class="button add-to-cart-button" type="submit">
-      <span class="status-text">{{ product.default_price | money_with_sign }} — Select option</span>
+      <span class="status-text">{{ product.default_price | money: theme.money_format }} — Select option</span>
     </button>
   {% endif %}
 {% endif %}
