--- a/source/layout.html
+++ b/source/layout.html
@@ -37,22 +37,29 @@
         <div class="header-center">
           {% if page.full_url contains '/products' or page.full_url contains '/category' or page.permalink == 'home' %}
             <div class="products-page-title">
-              {% if page.permalink == 'home' or page.full_url contains '/products' %}
-                <a href="#" class="open-category-nav">View — All</a>
-              {% else %}
-                <a href="#" class="open-category-nav">View — {{ page.name }}</a>
+              {% if categories.active != blank or artists.active != blank %}
+                {% if page.permalink == 'home' or page.full_url contains '/products' %}
+                  <a href="#" class="open-category-nav">View — All</a>
+                {% else %}
+                  <a href="#" class="open-category-nav">View — {{ page.name }}</a>
+                {% endif %}
               {% endif %}
             </div>
           {% elsif page.full_url contains '/product/' %}
             {% case product.status %}
               {% when 'active' %}
-                {% assign product_status = 'Active' %}
+                {% if product.has_default_option %}
+                  {% assign cursor_action = 'Select option' %}
+                {% else %}
+                  {% assign cursor_action = 'Buy' %}
+                {% endif %}
+                {% capture cursor_title %}{{ product.default_price | money_with_sign | strip_html }}<br />{{ cursor_action }}{% endcapture %}
               {% when 'sold-out' %}
-                {% assign product_status = 'Sold Out' %}
+                {% assign cursor_title = 'Sold Out' %}
               {% when 'coming-soon' %}
-                {% assign product_status = 'Coming Soon' %}
+                {% assign cursor_title = 'Coming Soon' %}
             {% endcase %}
-            <div class="product-page-title" data-cursor-title="{{ product_status }}" data-product-status="{{ product.status }}">{{ page.name }}</div>
+            <div class="product-page-title" data-cursor-title="{{ cursor_title }}" data-product-status="{{ product.status }}">{{ page.name }}</div>
           {% endif %}
         </div>
         
@@ -70,7 +77,7 @@
           <div class="product-page-subtitle"><a href="#" class="open-product-info">View Info</a></div>
         {% else %}
           {% if theme.logo != blank %}
-            <a class="store-link" href="/" title="{{ store.name | escape }}"><img alt="{{ store.name | escape }}" class="store-logo" src="{{ theme.images.logo.url | constrain: 500, 200 }}"></a>
+            <a class="store-link" href="/" title="{{ store.name | escape }}"><img alt="{{ store.name | escape }}" class="store-logo" src="{{ theme.images.logo.url | constrain: 1000, 240 }}"></a>
           {% else %}
             <a class="store-link" href="/" title="{{ store.name | escape }}">{{ store.name }}</a>
           {% endif %}
@@ -146,7 +153,7 @@
           
           {% if page.permalink == 'home' %}
             {% if theme.logo != blank %}
-              <img alt="{{ store.name | escape }}" class="store-logo" src="{{ theme.images.logo.url | constrain: 500, 200 }}">
+              <img alt="{{ store.name | escape }}" class="store-logo" src="{{ theme.images.logo.url | constrain: 1000, 240 }}">
             {% else %}
               {{ store.name }}
             {% endif %}
