update hamburger menu code

--- a/source/cart.html
+++ b/source/cart.html
@@ -2,10 +2,11 @@
   <header class="header-wrapper overlay-header">
     <div class="primary-header">
       <div class="header-left">
-        <button class="hamburger hamburger--squeeze is-active close-cart-overlay" type="button">
-          <span class="hamburger-box">
-            <span class="hamburger-inner"></span>
-          </span>
+        <button class="hamburger is-active close-cart-overlay" type="button">
+          <div>
+          	<span></span>
+          	<span></span>
+          </div>
         </button>
       </div>
       
