--- a/source/product.html
+++ b/source/product.html
@@ -15,7 +15,7 @@
         	<span></span>
         </div>
       </button>
-      <div class="overlay-title">{{ product.default_price | money_with_sign }} — Select option</div>
+      <div class="overlay-title">{{ product.default_price | money: theme.money_format }} — Select option</div>
     </div>
     
     <div class="overlay-content centered-content">
@@ -26,8 +26,8 @@
           <input type="hidden" name="[cart][add][id]" id="option" class="hidden-product-option">
           <ul class="options-list">
             {% for option in product.options %}
-              <li class="option-item{% if option.sold_out %} sold-out{% endif %}" data-option-id="{{ option.id }}" data-option-price="{{ option.price | money_with_sign | strip_html }}">
-                {{ option.name }} {% if option.price != product.default_price %}— {{ option.price | money_with_sign }}{% endif %}
+              <li class="option-item{% if option.sold_out %} sold-out{% endif %}" data-option-id="{{ option.id }}" data-option-price="{{ option.price | money: theme.money_format | strip_html }}">
+                {{ option.name }} {% if option.price != product.default_price %}— {{ option.price | money: theme.money_format }}{% endif %}
               </li>
             {% endfor %}
           </ul>
@@ -67,12 +67,12 @@
 
 {% if product.status == 'active' %}
   {% if product.has_default_option %}
-    <button class="button add-to-cart-button" type="submit">
-      <span class="status-text">{{ product.default_price | money_with_sign }} — Add to Cart</span>
+    <button class="button add-to-cart-button product-page-button" type="submit">
+      <span class="status-text">{{ product.default_price | money: theme.money_format }} — Add to Cart</span>
     </button>
   {% else %}
-    <button class="button add-to-cart-button" type="submit">
-      <span class="status-text">{{ product.default_price | money_with_sign }} — Select option</span>
+    <button class="button select-option-button product-page-button" type="submit">
+      <span class="status-text">{{ product.default_price | money: theme.money_format }} — Select option</span>
     </button>
   {% endif %}
 {% endif %}
