--- a/source/contact.html
+++ b/source/contact.html
@@ -1,5 +1,6 @@
 <div class="custom-page-content">
-
+  <h1 class="custom-page-title">{{ page.name }}</h1>
+  
   {% if contact.sent %}
     <h1 class="page-title">Your message has been sent and we'll get back to you soon!</h1>
     <div class="contact-form-block contact-send">
