Add spacer element for product title transitions

--- a/source/products.html
+++ b/source/products.html
@@ -19,6 +19,7 @@
           </div>
         </a>
       </li>
+      <li class="product-card-spacer"></li>
       {% endfor %}
     </ul>
     {% if paginate.pages > 1 %}
