--- a/source/product.html
+++ b/source/product.html
@@ -39,7 +39,7 @@
 {% endif %}
 
 <div class="mobile-product-title show-mobile-portrait">{{ page.name }}</div>
-<div class="mobile-product-description product-description show-mobile-portrait">
+<div class="product-description">
   {% if product.description != blank %}
     {{ product.description | paragraphs }}
   {% endif %}
