--- a/source/product.html
+++ b/source/product.html
@@ -26,7 +26,7 @@
           <input type="hidden" name="[cart][add][id]" id="option" class="hidden-product-option">
           <ul class="options-list">
             {% for option in product.options_in_stock %}
-              <li class="option-item{% if option.sold_out %} sold-out{% endif %}" data-option-id="{{ option.id }}" data-option-price="{{ option.price | money: theme.money_format | strip_html }}">
+              <li class="option-item" data-option-id="{{ option.id }}" data-option-price="{{ option.price | money: theme.money_format | strip_html }}">
                 {{ option.name }} {% if option.price != product.default_price %}— {{ option.price | money: theme.money_format }}{% endif %}
               </li>
             {% endfor %}
@@ -38,6 +38,10 @@
   </div>
 {% endif %}
 
+{% if product.on_sale %}
+  <div class="mobile-product-subtitle show-mobile-portrait">On Sale</div>
+{% endif %}
+
 <div class="mobile-product-title show-mobile-portrait">{{ page.name }}</div>
 <div class="product-description">
   {% if product.description != blank %}
@@ -45,34 +49,14 @@
   {% endif %}
 </div>
 
-<div class="full-screen-overlay product-description-overlay">
-  <div class="overlay-header">
-    <button class="hamburger hamburger--squeeze close-product-description-overlay" type="button">
-      <div>
-      	<span></span>
-      	<span></span>
-      </div>
-    </button>
-  
-    <div class="overlay-title">{{ page.name }}</div>
-  </div>
-  <div class="overlay-content centered-content">
-    <div class="product-description">
-      {% if product.description != blank %}
-        {{ product.description | paragraphs }}
-      {% endif %}
-    </div>
-  </div>
-</div>
-
 {% if product.status == 'active' %}
   {% if product.has_default_option %}
     <button class="button add-to-cart-button product-page-button" type="submit">
-      <span class="status-text">{{ product.default_price | money: theme.money_format }} — Add to Cart</span>
+      <span class="status-text">Add to Cart</span>
     </button>
   {% else %}
     <button class="button select-option-button product-page-button" type="submit">
-      <span class="status-text">{{ product.default_price | money: theme.money_format }} — Select option</span>
+      <span class="status-text">Select option</span>
     </button>
   {% endif %}
 {% endif %}
