--- a/source/cart.html
+++ b/source/cart.html
@@ -66,7 +66,7 @@
         {% endfor %}
       </ul>
       <div class="cart-footer">
-        <button type="submit" name="checkout" title="Checkout" class="button checkout-btn"><span class="checkout-btn-total">{{ cart.total | money: theme.money_format }}</span> — Checkout</button>
+        <button type="submit" name="checkout" title="Checkout" class="button checkout-btn">Checkout — <span class="checkout-btn-total">{{ cart.total | money: theme.money_format }}</span></button>
       </div>
     </form>
     
