--- a/source/home.html
+++ b/source/home.html
@@ -11,19 +11,20 @@
   {% if products != blank %}
     <ul class="product-list">
       {% for product in products %}
+        {% assign product_status = '' %}
         {% case product.status %}
           {% when 'active' %}
-            {% if product.on_sale %}{% assign product_status = 'On sale' %}{% endif %}
+            {% if product.on_sale %}{% assign product_status = 'On Sale' %}{% endif %}
           {% when 'sold-out' %}
-            {% assign product_status = 'Sold out' %}
+            {% assign product_status = 'Sold Out' %}
           {% when 'coming-soon' %}
-            {% assign product_status = 'Coming soon' %}
+            {% assign product_status = 'Coming Soon' %}
         {% endcase %}
-      <li class="product-card {{ product.css_class }}" data-tooltip="{{ product.default_price | money: theme.money_format | strip_html }}">
+      <li class="product-card {{ product.css_class }}">
         <a class="product-link" href="{{ product.url }}">
           <img class="product-thumbnail-image" alt="Image of {{ product.name | escape }}" src="{{ product.image | product_image_url | constrain: 2000 }}">
           <div class="product-info">
-            <div class="product-status">{{ product_status }}</div>
+            <div class="product-status">{% if product_status != blank %}{{ product_status }}  — {% endif%}{{ product.default_price | money: theme.money_format | strip_html }}</div>
             <div class="product-name">{{ product.name }}</div>
           </div>
         </a>
