--- a/source/cart.html
+++ b/source/cart.html
@@ -11,7 +11,7 @@
       </div>
       
       <div class="header-center">
-        <div class="product-page-title">Cart — {{ cart.item_count | pluralize: 'item', 'items' }} </div>
+        <div class="cart-page-title">Cart — {{ cart.item_count | pluralize: 'item', 'items' }} </div>
       </div>
       
       <div class="header-right">
