--- a/source/product.html
+++ b/source/product.html
@@ -38,11 +38,19 @@
   </div>
 {% endif %}
 
-{% if product.on_sale %}
-  <div class="mobile-product-subtitle show-mobile-portrait">On Sale</div>
-{% endif %}
+{% assign product_status = '' %}
+{% case product.status %}
+  {% when 'active' %}
+    {% if product.on_sale %}{% assign product_status = 'On Sale' %}{% endif %}
+  {% when 'sold-out' %}
+    {% assign product_status = 'Sold Out' %}
+  {% when 'coming-soon' %}
+    {% assign product_status = 'Coming Soon' %}
+{% endcase %}
 
 <div class="mobile-product-title show-mobile-portrait">{{ page.name }}</div>
+<div class="mobile-product-subtitle show-mobile-portrait">{% if product_status != blank %}{{ product_status }} — {% endif %}{{ product.default_price | money: theme.money_format }}</div>
+
 <div class="product-description">
   {% if product.description != blank %}
     {{ product.description | paragraphs }}
