fix top margin issues

--- a/source/layout.html
+++ b/source/layout.html
@@ -74,7 +74,7 @@
       </div>
     </header>
     
-    <div class="main {% if page.category == 'custom' or page.permalink == 'contact' or page.permalink == 'home' or page.permalink == 'products' %} has-top-margin{% endif %}">
+    <div class="main">
       {% if page.category == 'custom' or page.permalink == 'contact' %}
         <div class="page-nav-menu">
           
