--- a/source/product.html
+++ b/source/product.html
@@ -29,7 +29,7 @@
           <input type="hidden" name="[cart][add][id]" id="option" class="hidden-product-option">
           <ul class="options-list">
             {% for option in product.options_in_stock %}
-              <li class="option-item" data-option-id="{{ option.id }}" data-option-price="{{ option.price | money: theme.money_format | strip_html }}">
+              <li class="options-link option-item" data-option-id="{{ option.id }}" data-option-price="{{ option.price | money: theme.money_format | strip_html }}">
                 {{ option.name }} {% if option.price != product.default_price %}— {{ option.price | money: theme.money_format }}{% endif %}
               </li>
             {% endfor %}
