--- a/source/contact.html
+++ b/source/contact.html
@@ -2,9 +2,8 @@
   <h1 class="custom-page-title">{{ page.name }}</h1>
   
   {% if contact.sent %}
-    <h1 class="page-title">Your message has been sent and we'll get back to you soon!</h1>
-    <div class="contact-form-block contact-send">
-      <a class="back-to-shop-button button" href="/">Back to Shop</a>
+    <div class="contact-form-block contact-sent">
+      Your message has been sent and we'll get back to you soon!
     </div>
   {% else %}
     <form method="post" action="/contact" class="contact-form">
