update a few page styles temporarily disable infinite scroll

--- a/source/home.html
+++ b/source/home.html
@@ -31,6 +31,8 @@
       <li class="product-card-spacer"></li>
       {% endfor %}
     </ul>
+    
+    <div class="infinite-scroll-last">Back to top</div>
 
     {% if paginate.pages > 1 %}
       <div class="pagination"><a class="button next-button paginate-button" href="{{ paginate.next.url }}">{{ paginate.next.title }}</a></div>
