--- a/source/layout.html
+++ b/source/layout.html
@@ -108,7 +108,7 @@
               {% endif %}
               
               {% if store.website != blank %}
-                <a href="{{ store.website }}">Back to site</a>
+                <li><a href="{{ store.website }}">Back to site</a></li>
               {% endif %}
             </ul>
           {% endif %}
@@ -197,7 +197,7 @@
               {% endif %}
               
               {% if store.website != blank %}
-                <a href="{{ store.website }}">Back to site</a>
+                <li><a href="{{ store.website }}">Back to site</a></li>
               {% endif %}
             </ul>
           {% endif %}
