improve custom page elements improve input and textarea display

--- a/source/contact.html
+++ b/source/contact.html
@@ -1,4 +1,4 @@
-<div class="custom-page-content">
+<div class="contact-page custom-page-content">
   <h1 class="custom-page-title">{{ page.name }}</h1>
   
   {% if contact.sent %}
