--- a/source/layout.html
+++ b/source/layout.html
@@ -121,7 +121,7 @@
         {% if page.permalink == 'contact' %}
           {{ page_content }}
         {% else %}
-          <div class="custom-page-content">
+          <div class="custom-page custom-page-content">
             <h1 class="custom-page-title">{{ page.name }}</h1>
             {{ page_content | paragraphs }}
           </div>
