Refactor header code to improve padding Adjust announcement message spacing

--- a/source/cart.html
+++ b/source/cart.html
@@ -1,5 +1,5 @@
 <div class="cart-holder">
-  <header class="header-wrapper overlay-header">
+  <div class="header header-wrapper overlay-header">
     <div class="primary-header">
       <div class="header-left">
         <button class="hamburger is-active close-cart-overlay" type="button">
@@ -18,7 +18,7 @@
         &nbsp;
       </div>
     </div>
-  </header>
+  </div>
   <div class="cart-content">
     {% if errors != blank %}
       <ul class="errors {{ page.permalink }}-errors">
