--- a/source/product.html
+++ b/source/product.html
@@ -8,7 +8,7 @@
 
 {% if product.status == 'active' %}
   <div class="full-screen-overlay product-option-overlay">
-    <div class="overlay-header">
+    <div class="header overlay-header">
       <div class="header-left">
         <button class="hamburger close-product-option-overlay" type="button">
           <div>
