adjust hamburger menu spacing add in new ‘return’ icon on Product page remove left-hand navigation menu for custom/contact pages adjust transition when closing product option selection show ‘your cart is empty’ instead of redirecting home other misc. css tweaks

--- a/source/product.html
+++ b/source/product.html
@@ -10,7 +10,7 @@
   <div class="full-screen-overlay product-option-overlay">
     <div class="header overlay-header">
       <div class="header-left">
-        <button class="hamburger close-product-option-overlay" type="button">
+        <button class="hamburger is-active close-product-option-overlay" type="button">
           <div>
           	<span></span>
           	<span></span>
