--- a/source/home.html
+++ b/source/home.html
@@ -24,7 +24,7 @@
           <img class="product-thumbnail-image" alt="Image of {{ product.name | escape }}" src="{{ product.image | product_image_url | constrain: 2000 }}">
           <div class="product-info">
             <div class="product-status">{% if product_status != blank %}{{ product_status }}  — {% endif%}{{ product.default_price | money: theme.money_format | strip_html }}</div>
-            <div class="product-name">{{ product.name | truncate: 60 }}</div>
+            <div class="product-name">{{ product.name | truncate: 50 }}</div>
           </div>
         </a>
       </li>
@@ -38,7 +38,7 @@
         <div class="infinite-scroll-request">
           <div class="spinner"></div>
         </div>
-        <div class="infinite-scroll-last">Back to top</div>
+        <div class="infinite-scroll-last">Back to Top</div>
         <div class="infinite-scroll-error">No more pages to load</div>
       </div>
     {% endif %}
