--- a/source/product.html
+++ b/source/product.html
@@ -10,7 +10,7 @@
   <div class="full-screen-overlay product-option-overlay">
     <div class="header overlay-header">
       <div class="header-left">
-        <button class="hamburger is-active close-product-option-overlay" type="button">
+        <button class="hamburger grow-cursor is-active close-product-option-overlay" type="button">
           <div>
           	<span></span>
           	<span></span>
@@ -29,7 +29,7 @@
           <input type="hidden" name="[cart][add][id]" id="option" class="hidden-product-option">
           <ul class="options-list">
             {% for option in product.options_in_stock %}
-              <li class="options-link option-item" data-option-id="{{ option.id }}" data-option-price="{{ option.price | money: theme.money_format | strip_html }}">
+              <li class="options-link option-item grow-cursor" data-option-id="{{ option.id }}" data-option-price="{{ option.price | money: theme.money_format | strip_html }}">
                 {{ option.name }} {% if option.price != product.default_price %}— {{ option.price | money: theme.money_format }}{% endif %}
               </li>
             {% endfor %}
