--- a/source/contact.html
+++ b/source/contact.html
@@ -16,19 +16,19 @@
     <div class="contact-form-block contact-name">
       <label class="contact-label" for="name-input">Name</label>
       <div class="input-holder">
-        {{ contact | contact_input: 'name', tabindex: 1 }}
+        {{ contact | contact_input: 'name-input', tabindex: 1 }}
       </div>
     </div>
     <div class="contact-form-block contact-email">
       <label class="contact-label" for="email-input">Email</label>
       <div class="input-holder">
-        {{ contact | contact_input: 'email', tabindex: 2 }}
+        {{ contact | contact_input: 'email-input', tabindex: 2 }}
       </div>
     </div>
     <div class="contact-form-block contact-subject">
       <label class="contact-label" for="subject-input">Subject</label>
       <div class="input-holder">
-        {{ contact | contact_input: 'subject', tabindex: 3 }}
+        {{ contact | contact_input: 'subject-input', tabindex: 3 }}
       </div>
     </div>
     <div class="contact-form-block contact-message">
@@ -40,7 +40,7 @@
     <div class="contact-form-block contact-captcha">
       <label class="contact-label" for="captcha-input">Spam check</label>
       <div class="input-holder captcha-holder">
-        {{ contact | contact_input: 'captcha', tabindex: 5 }} {{ contact.captcha }}
+        {{ contact | contact_input: 'captcha-input', tabindex: 5 }} {{ contact.captcha }}
         <div class="captcha-instructions">Enter the characters from the image</div>
       </div>
     </div>
