--- a/source/layout.html
+++ b/source/layout.html
@@ -205,9 +205,9 @@
       </div>
     </div>
     
-    {% if theme.announcement_bar_text != blank %}
+    {% if theme.announcement_message_text != blank %}
       <div class="flash-message">
-        <div class="flash-message-text">{{ theme.announcement_bar_text }}</div>
+        <div class="flash-message-text">{{ theme.announcement_message_text }}</div>
         <div class="flash-message-close grow-cursor">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10"><path d="M10 1.1L8.9 0 5 3.9 1.1 0 0 1.1 3.9 5 0 8.9 1.1 10 5 6.1 8.9 10 10 8.9 6.1 5z"/></svg>
         </div>
