--- a/source/layout.html
+++ b/source/layout.html
@@ -12,7 +12,7 @@
     <header class="header header-wrapper layout-header">
       <div class="primary-header">
         <div class="header-left">
-          <button class="hamburger is-active return-home-link grow-cursor" type="button">
+          <a class="hamburger is-active return-home-link grow-cursor" href="/">
             {% if page.full_url contains '/product/' %}
               <svg class="return-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30"><path d="M30 17.9c0-.6-.1-1.2-.2-1.8-.9-3.6-4.1-6.1-7.8-6.1H3.4l4.8-4.8L6.9 4 0 10.9l6.9 6.9 1.3-1.2-4.8-4.8h18.7c1.7 0 3.2.7 4.4 1.9 1.2 1.2 1.8 2.8 1.8 4.4 0 1.7-.7 3.2-1.9 4.4-1.2 1.1-2.7 1.8-4.3 1.8H16.4V26h5.8c4.3-.1 7.9-3.7 7.8-8.1z"/></svg>
             {% else %}
@@ -21,13 +21,13 @@
               	<span></span>
               </div>
             {% endif %}
-          </button>
-          <button class="hamburger open-page-nav grow-cursor" type="button">
+          </a>
+          <a class="hamburger open-page-nav grow-cursor" href="#">
             <div>
             	<span></span>
             	<span></span>
             </div>
-          </button>
+          </a>
         </div>
         
         <div class="header-center">
