--- a/source/product.html
+++ b/source/product.html
@@ -70,7 +70,12 @@
           {% endif %}
         {% endif %}
         {{ product | product_quantity_input, 1, 'product-quantity', 'product-quantity' }}
-        <button class="button add-to-cart-button" name="submit" type="submit" title="Add to Cart" data-adding-text="Adding..." data-added-text="Added!" data-add-title="Add to Cart" data-sold-title="Sold out">Add to Cart</button>
+        <button class="button add-to-cart-button" name="submit" type="submit" title="Add to Cart" data-adding-text="Adding..." data-added-text="Added!" data-add-title="Add to Cart" data-sold-title="Sold out"{% if product.has_default_option %}{% else %}disabled="disabled"{% endif %}>Add to Cart</button>
+        {% if product.has_option_groups %}
+          <div class="reset-selection-button-container">
+            <button class="button minimal-button reset-selection-button grow-cursor" title="Reset selection" type="reset">Reset selection</button>
+          </div>
+        {% endif %}
       </form>
     </div>
   </div>
