--- a/source/layout.html
+++ b/source/layout.html
@@ -42,15 +42,7 @@
               {% endif %}
             </div>
           {% elsif page.full_url contains '/product/' %}
-            {% case product.status %}
-              {% when 'active' %}
-                {% if product.has_default_option %}
-                  {% assign cursor_action = 'Add to<br />Cart' %}
-                {% else %}
-                  {% assign cursor_action = 'Select<br />Option' %}
-                {% endif %}
-            {% endcase %}
-            <div class="product-page-title" data-cursor-action="{{ cursor_action }}">{{ page.name }}</div>
+            <div class="product-page-title">{{ page.name }}</div>
           {% endif %}
         </div>
 
