Markup improvements for accessibility

--- a/source/layout.html
+++ b/source/layout.html
@@ -42,7 +42,7 @@
               {% endif %}
             </div>
           {% elsif page.full_url contains '/product/' %}
-            <div class="product-page-title">{{ page.name }}</div>
+            <h1 class="product-page-title">{{ page.name }}</h1>
           {% endif %}
         </div>
 
